--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "api/bulk-sync.js": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 60
-    }
-  }
+  "version": 2
 }
